--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: "kotlin-kapt"
 
 android {
     compileSdkVersion 29
@@ -18,14 +19,24 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        buildTypes.each {
+            it.buildConfigField 'String', 'REST_ADDRESS', restAddress
+        }
     }
 
 }
 
 dependencies {
+    implementation project(":common")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+
+    implementation 'org.koin:koin-core:2.0.1'
+    implementation 'org.koin:koin-core-ext:2.0.1'
+
+    implementation 'androidx.room:room-runtime:2.2.4'
+    implementation "androidx.room:room-ktx:2.2.4"
+    kapt 'androidx.room:room-compiler:2.2.4'
 
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
