--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -24,10 +24,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-
-        buildTypes.each {
-            it.buildConfigField 'String', 'REST_ADDRESS', restAddress
-        }
     }
 
 }
@@ -35,6 +31,7 @@ android {
 dependencies {
     implementation project(":data")
     implementation project(":domain")
+    implementation project(":common")
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
@@ -43,7 +40,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation 'org.koin:koin-core:2.0.1'
     implementation 'org.koin:koin-core-ext:2.0.1'
     implementation 'org.koin:koin-androidx-scope:2.0.1'
@@ -51,15 +47,7 @@ dependencies {
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.retrofit2:retrofit-mock:2.6.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
-
     implementation 'com.jakewharton.timber:timber:4.7.1'
-
-    implementation 'androidx.room:room-runtime:2.2.4'
-    kapt 'androidx.room:room-compiler:2.2.4'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
