--- a/data/build.gradle
+++ b/data/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    implementation project(":domain")
     implementation project(":common")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
