--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "kotlin-kapt"
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -22,6 +24,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        buildTypes {
+        }
     }
 
 }
@@ -33,4 +37,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 
     implementation 'org.koin:koin-core:2.0.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 }
